adding text for home page and updating projects page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		                            // entry less file
 		    };
 		</script>
-		<script src="js/vendor/less.min.js" type="text/javascript"></script> -->
+		<script src="js/vendor/less.min.js" type="text/javascript"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -52,28 +52,36 @@
 	        			<div class="drip6 hidden-phone"></div>
 	        			<div class="content-box">
 		        			<a class="content-head" href="#">Web Developer</a>
-		        			<p class="content-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed felis massa. Integer hendrerit nunc eget dolor molestie in sodales tortor cursus. In ac odio nulla. Nunc ornare risus hendrerit ligula porta eget accumsan nisi cursus. Etiam facilisis, risus nec bibendum congue, risus felis venenatis libero, quis congue velit leo ut turpis. Maecenas quis lacus quam, at tincidunt odio. Morbi et quam erat, ut vehicula mauris. Nullam eros orci, iaculis non sollicitudin quis, porta vel leo. Fusce non tortor orci, in blandit massa. In nulla felis, tristique ac feugiat sed, sagittis et augue. </p>
+		        			<p class="content-body">There are two things I value when I’m coding more than anything else: simplicity and elegance. 
+	        					Implementing code with those two principles in mind not only leads to more efficient, less buggy code, it also makes maintainability much easier for the other developers on my team (and my future self).
+	        					I take that same approach to the website interfaces I develop, focusing on simple and understandable page design.</p>
 	        			</div>
 	        		</div>
 	        		<div class="span3">
 	        			<div class="drip3 hidden-phone"></div>
 	        			<div class="content-box">
 		        			<a class="content-head" href="#">Board Gamer</a>
-		        			<p class="content-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed felis massa. Integer hendrerit nunc eget dolor molestie in sodales tortor cursus. In ac odio nulla. Nunc ornare risus hendrerit ligula porta eget accumsan nisi cursus. Etiam facilisis, risus nec bibendum congue, risus felis venenatis libero, quis congue velit leo ut turpis. Maecenas quis lacus quam, at tincidunt odio. Morbi et quam erat, ut vehicula mauris. Nullam eros orci, iaculis non sollicitudin quis, porta vel leo. Fusce non tortor orci, in blandit massa. In nulla felis, tristique ac feugiat sed, sagittis et augue. </p>
+		        			<p class="content-body">Growing up, I often imagined commanding fleets of starships, traveling the world as a Portuguese explorer, or organizing the construction of a great cathedral!
+		        				Well, maybe not that last one, but the point is that while I may never actually get to do those things, with modern board games I can feel like I have!
+		        				My wife and I love collecting and playing designer board games together, but most of all we love defeating each other in the latest conquest.</p>
 		        		</div>
 	        		</div>
 	        		<div class="span3">
 	        			<div class="drip8 hidden-phone"></div>
 	        			<div class="content-box">
 		        			<a class="content-head" href="#">Music Lover</a>
-		        			<p class="content-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed felis massa. Integer hendrerit nunc eget dolor molestie in sodales tortor cursus. In ac odio nulla. Nunc ornare risus hendrerit ligula porta eget accumsan nisi cursus. Etiam facilisis, risus nec bibendum congue, risus felis venenatis libero, quis congue velit leo ut turpis. Maecenas quis lacus quam, at tincidunt odio. Morbi et quam erat, ut vehicula mauris. Nullam eros orci, iaculis non sollicitudin quis, porta vel leo. Fusce non tortor orci, in blandit massa. In nulla felis, tristique ac feugiat sed, sagittis et augue. </p>
+		        			<p class="content-body">If you see me heading to work on the subway in NYC, chances are I’ll have my headphones on listening to music podcasts and the latest albums on Spotify.
+		        				I am always searching for sounds I’ve never heard before and learning everything I can about them.
+		        				I see this search as a sort of musical adventure, searching for lost gems in the vast sonic jungle. Hmm, maybe I should start a project about that...</p>
 	        			</div>
 	        		</div>
 	        		<div class="span3">
 	        			<div class="drip4 hidden-phone"></div>
 	        			<div class="content-box">
 		        			<a class="content-head" href="#">Sports Geek-er</a>
-		        			<p class="content-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed felis massa. Integer hendrerit nunc eget dolor molestie in sodales tortor cursus. In ac odio nulla. Nunc ornare risus hendrerit ligula porta eget accumsan nisi cursus. Etiam facilisis, risus nec bibendum congue, risus felis venenatis libero, quis congue velit leo ut turpis. Maecenas quis lacus quam, at tincidunt odio. Morbi et quam erat, ut vehicula mauris. Nullam eros orci, iaculis non sollicitudin quis, porta vel leo. Fusce non tortor orci, in blandit massa. In nulla felis, tristique ac feugiat sed, sagittis et augue. </p>		        			
+		        			<p class="content-body">Propelled by the impulse of curiosity (as well as boredom), I am constantly coming up with various mini-projects.
+		        				Whether I’m installing custom roms on my Nexus 4, picking up new programming languages, or learning everything there is to know about European football, there is always something piquing my interest.
+		        				Think of me as a professional dabbler, always ready to take on a new project!</p>		        			
 	        			</div>	        			
 	        		</div>
 	        		<div class="drip5 last-drip hidden-phone"></div>
