Moving site to laravel 4

--- a/projects.html
+++ b/projects.html
@@ -91,7 +91,7 @@
 	        		&lt;div class="span3"&gt;
 	        			&lt;div class="drip4 hidden-phone"&gt;&lt;/div&gt;
 	        			&lt;div class="content-box"&gt;
-		        			&lt;a class="content-head" href="#"&gt;Sports Geek-er&lt;/a&gt;
+		        			&lt;a class="content-head" href="#"&gt;Project Dabbler&lt;/a&gt;
 		        			&lt;p class="content-body"&gt;Propelled by the impulse of curiosity (as well as boredom), I am constantly coming up with various mini-projects.
 		        				Whether I’m installing custom roms on my Nexus 4, picking up new programming languages, or learning everything there is to know about European football, there is always something piquing my interest.
 		        				Think of me as a professional dabbler, always ready to take on a new project!&lt;/p&gt;		        			
