--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@ title: Your New Jekyll Site
 
 
     <div class="container">
-<!--       <div class="logo">
-        <img src="assets/img/logo.png" width="100" alt="BlackTie.co">
+      <div class="logo">
+        <div class="profile"></div>
       </div>
- -->    <div class="row centered">
+    <div class="row centered">
       <div class="col-lg-8 col-lg-offset-2 w">
         <h1>{{ site.data.aboutMe.name }}</h1>
         <h2>{{ site.data.aboutMe.subtitle }}</h2>
